--- a/config.json
+++ b/config.json
@@ -1,5 +1,5 @@
 {
-    "isFeatureHide": true,
+    "isFeatureHide": false,
     "countClickShowAds": 3, 
     "needPurchase": false,
     "makeCrash": false,
