--- a/config.json
+++ b/config.json
@@ -5,5 +5,6 @@
     "makeCrash": false,
     "isDisableAdsBanner": false,
     "disableClosePurchase": false,
-    "needAlertAdsShow": false
+    "needAlertAdsShow": false,
+    "disableCloseOnboarding": false
 }
