--- a/config.json
+++ b/config.json
@@ -2,7 +2,7 @@
     "isFeatureEnable": false,
     "countClickShowAds": 3, 
     "needPurchase": false,
-    "makeCrash": true,
+    "makeCrash": false,
     "isDisableAdsBanner": false,
     "disableClosePurchase": false,
     "needAlertAdsShow": false,
